# cal-helper

./: .env.example  README.md  main.py  pyproject.toml  test.py
examples/: example.txt
src/: streamlit_app.py
src/calhelper/: api.py  assistant.py  cli.py
