[project]
name = "calhelper"
version = "0.1.0"
description = "An AI powered calendar helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "openai>=1.93.3",
    "pydantic>=2.11.7",
    "langgraph>=0.1.20",
]

[tool.setuptools.packages.find]
where = ["src"]
